--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,68 @@
 <project>
 
-  <target name="clean">
-    <delete dir="build"/>
+  <property name="src.dir" location="src/main/java" />
+  <property name="test.dir" location="src/test/java" />
+  <property name="build.dir" location="build" />
+  <property name="build.src.dir" location="build/classes" />
+  <property name="build.test.dir" location="build/test" />
+
+  <path id="junit.class.path">
+    <pathelement location="lib/test/junit/junit-4.12.jar" />
+    <pathelement location="lib/test/junit/hamcrest-core-1.3.jar" />
+    <pathelement location="${build.src.dir}" />
+  </path>
+
+  <!-- Clean src build only -->
+  <target name="clean-src">
+    <delete dir="${build.src.dir}"/>
   </target>
 
-  <target name="compile">
-    <mkdir dir="build/classes"/>
-    <javac srcdir="src" destdir="build/classes"/>
+  <!-- Clean test build only -->
+  <target name="clean-test">
+    <delete dir="${build.test.dir}"/>
   </target>
+
+  <!-- Clean all -->
+  <target name="clean">
+    <delete dir="${build.dir}"/>
+  </target>
+
+  <!-- Compile src -->
+  <target name="compile-src" depends="clean-src">
+    <mkdir dir="${build.src.dir}" />
+    <javac srcdir="${src.dir}" destdir="${build.src.dir}"
+           includeantruntime="false" />
+  </target>
+
+  <!-- Compile tests -->
+  <target name="compile-test" depends="clean-test">
+    <mkdir dir="${build.test.dir}" />
+    <javac srcdir="${test.dir}" destdir="${build.test.dir}"
+           includeantruntime="false">
+      <classpath refid="junit.class.path" />
+    </javac>
+  </target>
+
+  <!-- Compiles Java sources and tests -->
+  <target name="compile" depends="compile-src, compile-test" />
+
+  <!-- Run JUnit tests -->
+  <target name="test">
+    <junit printsummary="on" showoutput="true">
+      <classpath refid="junit.class.path" />
+      <classpath>
+        <pathelement location="${build.test.dir}" />
+      </classpath>
+      <formatter type="plain" usefile="false" />
+      <batchtest>
+        <fileset dir="${test.dir}">
+          <include name="**/*Test*.java" />
+        </fileset>
+      </batchtest>
+    </junit>
+  </target>
+
+  <!-- Compile everything and test -->
+  <target name="all" depends="compile, test"/>
 
 </project>
